# store_actix

./: .env.sample  Cargo.toml  Dockerfile  Dockerfile.other  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2021-07-17-083749_create_user_role/: down.sql  up.sql
migrations/2021-07-17-083749_create_user_type/: up.sql
migrations/2021-07-17-093922_create_user/: up.sql
src/: controllers.rs  errors.rs  helpers.rs  l_actors.rs  lib.rs  main.rs  prelude.rs  routes.rs  schema.rs
src/actors/: user.rs  users.rs
src/controllers/: prelude.rs  users.rs
src/controllers/users/: forgot_password.rs  login.rs  register.rs  reset_password.rs
src/db/: index.rs  init.rs  prelude.rs
src/errors/: response_error.rs
src/helpers/: hash.rs  mailer.rs  response_generator.rs  token.rs
src/models/: user.rs  users.rs
src/routes/: index.rs  prelude.rs  users.rs
src/validations/: users.rs
