[package]
name = "store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
validator = { version = "0.12", features = ["derive"] }
num_cpus = "1.11.1"
serde_derive = "1"
serde = "1"
actix = "0.12.0"
actix-web = "3"
actix-cors = "0.5.4"
actix-rt = "2.2.0"
diesel = { version = "1.4.7", features = ["postgres", "chrono", "uuid", "chrono", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "1.4.0"
cargo-watch = "7.8.1"
pbkdf2 = "0.7"
rand_core = { version = "0.6", features = ["std"] }
